[workspace]
resolver = "2"
members = ["cli", "util"]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mycojs/myco"

[workspace.dependencies]
futures = "0.3.21"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.140"
swc_common = { version = "0.31.6", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "0.103.7"
swc_ecma_codegen = "0.138.17"
swc_ecma_parser = "0.133.14"
swc_ecma_transforms_base = "0.126.20"
swc_ecma_transforms_typescript = "0.176.30"
swc_ecma_visit = "0.89.7"
thiserror = "1.0.69"
tokio = "1.43.0"
toml = "0.7.3"
url = { version = "2.3.1", features = ["serde"] }
util = { path = "util" }
v8 = "137.2.0"
walkdir = "2.3.3"
zip = "0.6.5"
