[package]
name = "myco"
version.workspace = true
edition.workspace = true
description = "Myco runtime for secure server-side TypeScript projects."

[dependencies]
anyhow = { workspace = true }
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["cargo"] }
colored = "3.0.0"
futures = { workspace = true }
rand = { version = "0.8.4", features = ["std_rng"] }
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.3"
toml_edit = "0.19.8"
url = { workspace = true }
util = { workspace = true }
v8 = { workspace = true }
zip = { workspace = true }

[build-dependencies]
zip = { workspace = true }
util = { workspace = true }

[[bin]]
name = "myco"
