# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_core"
version = "0.185.0"
authors = ["the Deno authors"]
edition.workspace = true
license = "MIT"
readme = "README.md"
repository.workspace = true
description = "A modern JavaScript/TypeScript runtime built with V8, Rust, and Tokio"

[features]
default = ["v8_use_custom_libcxx"]
v8_use_custom_libcxx = ["v8/use_custom_libcxx"]
include_js_files_for_snapshotting = []

[dependencies]
anyhow.workspace = true
bytes = "1.4.0"
deno_ops = "0.63.0"
futures.workspace = true
libc = "0.2.143"
log = "0.4.17"
parking_lot = "0.12.1"
pin-project = "1.0.12"
serde.workspace = true
serde_json = { version = "1.0.96", features = ["preserve_order"] }
serde_v8 = "0.96.0"
smallvec = "1.10.0"
sourcemap = "6.1"
tokio.workspace = true
url.workspace = true
v8 = "0.71.2"

[[example]]
name = "http_bench_json_ops"
path = "examples/http_bench_json_ops/main.rs"
