[package]
name = "myco-test-suite"
version.workspace = true
edition.workspace = true
description = "Integration test suite for Myco runtime"

[[bin]]
name = "myco-test-suite"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
colored = "3.0.0"
walkdir = { workspace = true }
tempfile = "3.8.0"
serde_yaml = "0.9.25"
regex = "1.10.0"
clap = { version = "4.2.7", features = ["derive"] } 