[package]
name = "util"
version.workspace = true
edition.workspace = true
description = "Utilities package for Myco CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = { workspace = true }
swc_common = { version = "0.31.6", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "0.103.7"
swc_ecma_codegen = "0.138.17"
swc_ecma_parser = "0.133.14"
swc_ecma_transforms_base = "0.126.20"
swc_ecma_transforms_typescript = "0.176.30"
swc_ecma_visit = "0.89.7"
walkdir = "2.3.3"
zip = { workspace = true }

