[package]
name = "util"
version.workspace = true
edition.workspace = true
description = "Utilities package for Myco CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_transforms_base = { workspace = true }
swc_ecma_transforms_typescript = { workspace = true }
swc_ecma_visit = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

