[package]
edition.workspace = true
name = "deno_ops"
version = "0.63.0"
authors = ["the Deno authors"]
description = "Proc macro for writing Deno Ops"
readme = "README.md"
license = "MIT"
repository.workspace = true

[lib]
path = "./src/lib.rs"
proc-macro = true

[dependencies]
lazy-regex = "2.5.0"
once_cell = "1.17.1"
pmutil = "0.5.3"
proc-macro-crate = "1.1.3"
proc-macro2 = "1"
quote = "1"
regex = "^1.7.0"
syn = { version = "1", features = ["full", "extra-traits"] }
